--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming soon</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/pages/comming-soon.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <div>
+                <img src="./img/logo.png" alt="">
+                <h1>Comming soon</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati totam pariatur, non quaerat corrupti eos, unde ex accusamus maxime sint consequuntur, atque qui doloremque repellendus commodi dolorum necessitatibus maiores corporis.</p>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <div>
+                    <h2>Abous</h2>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        footer
+    </footer>
 </body>
 </html>
