--- a/index.html
+++ b/index.html
@@ -39,16 +39,44 @@
                         <div class="label">Seconds</div>
                     </div>
                 </div>
+                <div class="mouse"></div>
             </div>
         </section>
 
         <section class="container">
             <div class="row">
-                <div class="left-column">
+                <div class="column">
                     <h2>About startup</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias voluptate aspernatur perspiciatis delectus, assumenda aut sapiente atque praesentium. Magnam vero adipisci, sed esse consectetur ullam incidunt quam totam illo dignissimos!</p>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">UX design</div>
+                            <div class="value">90%</div>
+                        </div>
+                        <div class="bottom">
+                            <div class="bar"></div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">Web design</div>
+                            <div class="value">75%</div>
+                        </div>
+                        <div class="bottom">
+                            <div class="bar" style="width: 75%;"></div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">Web development</div>
+                            <div class="value">45%</div>
+                        </div>
+                        <div class="bottom">
+                            <div class="bar" style="width: 45%;"></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="right-column">
+                <div class="column right-column">
                     <h2>Have any question?</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident mollitia, quasi eum aut id voluptatum earum molestias unde? Quia facilis delectus suscipit obcaecati? Quas sequi cum cupiditate maiores tempora laudantium.</p>
                 </div>
