--- a/index.html
+++ b/index.html
@@ -86,16 +86,26 @@
         </section>
     </main>
 
-    <footer class="container bg-blue">
+    <footer class="container footer bg-blue">
+        <div class="row">
+            <div class="socials">
+                <a class="fa fa-facebook" href="#" target="_blank"></a>
+                <a class="fa fa-twitter" href="#" target="_blank"></a>
+                <a class="fa fa-dribbble" href="#" target="_blank"></a>
+                <a class="fa fa-tumblr" href="#" target="_blank"></a>
+                <a class="fa fa-linkedin" href="#" target="_blank"></a>
+                <a class="fa fa-instagram" href="#" target="_blank"></a>
+                <a class="fa fa-rss" href="#" target="_blank"></a>
+            </div>
+        </div>
         <div class="row-short">
             <img class="logo" src="./img/logo-white.png" alt="Matrox logo">
             <div class="trio">
-                <p>Copyright &copy, 2025 <a href="#">Matrox</a></p>
+                <p>Copyright &copy; 2025 <a href="#">Matrox</a></p>
                 <p>All rights reserved</p>
                 <p>Designed by <a href="#">TrendyTheme</a></p>
             </div>
-            <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus neque, accusantium, temporibus officiis illo similique odit exercitationem voluptatibus <a href="#">200+</a> laudantium placeat dignissimos saepe nulla corporis, voluptate facere <a href="#">Matrox</a> qui quasi!</p>
-          
+            <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus neque, accusbus officiis illo similique odit voluptatibus <a href="#">200+</a> laudantium placeat dignissimos saepe nulla corporis, voluptate facere <a href="#">Matrox</a> qui quasi!</p>
         </div>
     </footer>
 
