--- a/index.html
+++ b/index.html
@@ -15,101 +15,180 @@
 </head>
 
 <body>
-
-    
     <main>
-        <section class="container bg-blue hero">
-            <div class="row-short">
-                <img class="logo" src="./img/logo.png" alt="Logo">
-                <h1 class="center">Coming soon</h1>
-                <p class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda cum ut placeat, possimus maiores modi enim cumque. Voluptate expedita, molestiae cumque, veniam aliquid at ratione error eum eos eaque adipisci.</p>
-                <div class="clock">
-                    <div class="time">
-                        <div class="value">432</div>
-                        <div class="label">Days</div>
-                    </div>
-                    <div class="time">
-                        <div class="value">09</div>
-                        <div class="label">Hours</div>
-                    </div>
-                    <div class="time">
-                        <div class="value">37</div>
-                        <div class="label">Minutes</div>
-                    </div>
-                    <div class="time">
-                        <div class="value">39</div>
-                        <div class="label">Seconds</div>
-                    </div>
-                </div>
-                <div class="mouse"></div>
+      <section class="container bg-blue hero">
+        <div class="row-short">
+          <img class="logo" src="./img/Logo.png" alt="Logo" />
+          <h1 class="center">Coming soon</h1>
+          <p class="center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+            reiciendis, nihil cupiditate quae blanditiis aspernatur sunt
+            corporis, ipsam provident incidunt ratione. Commodi, illo! Animi ex
+            neque beatae, perspiciatis voluptatibus nostrum?
+          </p>
+          <div class="clock">
+            <div class="time">
+              <div class="value">432</div>
+              <div class="label">Days</div>
             </div>
-        </section>
+            <div class="time">
+              <div class="value">09</div>
+              <div class="label">Huors</div>
+            </div>
+            <div class="time">
+              <div class="value">37</div>
+              <div class="label">Minutes</div>
+            </div>
+            <div class="time">
+              <div class="value">39</div>
+              <div class="label">Seconds</div>
+            </div>
+          </div>
+          <div class="input__subscribe">
+            <label for="subscribe">Type your email</label>
+            <input
+              id="subscribe"
+              placeholder="Type your email"
+              type="email"
+              name="email"
+            />
+          </div>
+          <button class="btn__subscribe" type="reset">Subscribe Now</button>
 
-        <section class="container">
-            <div class="row">
-                <div class="column">
-                    <h2>About startup</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias voluptate aspernatur perspiciatis delectus, assumenda aut sapiente atque praesentium. Magnam vero adipisci, sed esse consectetur ullam incidunt quam totam illo dignissimos!</p>
-                    <div class="progress-bar">
-                        <div class="top">
-                            <div class="label">UX design</div>
-                            <div class="value">90%</div>
-                        </div>
-                        <div class="bottom">
-                            <div class="bar"></div>
-                        </div>
-                    </div>
-                    <div class="progress-bar">
-                        <div class="top">
-                            <div class="label">Web design</div>
-                            <div class="value">75%</div>
-                        </div>
-                        <div class="bottom">
-                            <div class="bar" style="width: 75%;"></div>
-                        </div>
-                    </div>
-                    <div class="progress-bar">
-                        <div class="top">
-                            <div class="label">Web development</div>
-                            <div class="value">45%</div>
-                        </div>
-                        <div class="bottom">
-                            <div class="bar" style="width: 45%;"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column right-column">
-                    <h2>Have any question?</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident mollitia, quasi eum aut id voluptatum earum molestias unde? Quia facilis delectus suscipit obcaecati? Quas sequi cum cupiditate maiores tempora laudantium.</p>
-                </div>
+          <div class="mouse"></div>
+        </div>
+      </section>
+
+      <section class="container">
+        <div class="row">
+          <div class="left-column">
+            <h2>About startup</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aut
+              quia reiciendis aliquid distinctio est temporibus nesciunt,
+              repellat reprehenderit dolores vitae, quibusdam, placeat vel illum
+              sapiente ratione laborum blanditiis iusto.
+            </p>
+            <div class="progress-bar">
+              <div class="top">
+                <div class="label">UX design</div>
+                <div class="value">90%</div>
+              </div>
+              <div class="bottom">
+                <div class="bar"></div>
+              </div>
             </div>
-        </section>
+
+            <div class="progress-bar">
+              <div class="top">
+                <div class="label">WEB design</div>
+                <div class="value">75%</div>
+              </div>
+              <div class="bottom">
+                <div class="bar" style="width: 75%"></div>
+              </div>
+            </div>
+
+            <div class="progress-bar">
+              <div class="top">
+                <div class="label">WEB development</div>
+                <div class="value">45%</div>
+              </div>
+              <div class="bottom">
+                <div class="bar" style="width: 45%"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="right-column">
+            <h2>Have any question?</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. A unde
+              numquam laborum magni, distinctio soluta, natus, repudiandae
+              dignissimos est aliquid doloribus reiciendis eveniet optio at ea
+              assumenda sequi voluptatum repellat.
+            </p>
+            <form>
+              <div class="input__name">
+                <label for="name">Name</label>
+                <input id="name" placeholder="Name" type="text" name="name" />
+              </div>
+              <div class="input__email">
+                <label for="email">Email</label>
+                <input
+                  id="email"
+                  placeholder="Email"
+                  type="email"
+                  name="email"
+                />
+              </div>
+              <div class="input__message">
+                <label for="message">Message:</label>
+                <textarea
+                  name="message"
+                  id="message"
+                  placeholder="...."
+                ></textarea>
+              </div>
+              <button class="btn__submit" type="reset">Send mesage</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="container footer bg-blue">
-        <div class="row">
-            <div class="socials">
-                <a class="fa fa-facebook" href="#" target="_blank"></a>
-                <a class="fa fa-twitter" href="#" target="_blank"></a>
-                <a class="fa fa-dribbble" href="#" target="_blank"></a>
-                <a class="fa fa-tumblr" href="#" target="_blank"></a>
-                <a class="fa fa-linkedin" href="#" target="_blank"></a>
-                <a class="fa fa-instagram" href="#" target="_blank"></a>
-                <a class="fa fa-rss" href="#" target="_blank"></a>
-            </div>
+    <footer class="footer container bg-blue">
+      <div class="row">
+        <div class="socials">
+          <a
+            class="fa fa-facebook"
+            href="https://example.com"
+            target="_blank"
+          ></a>
+          <a
+            class="fa fa-twitter"
+            href="https://example.com"
+            target="_blank"
+          ></a>
+          <a
+            class="fa fa-dribbble"
+            href="https://example.com"
+            target="_blank"
+          ></a>
+          <a
+            class="fa fa-tumblr"
+            href="https://example.com"
+            target="_blank"
+          ></a>
+          <a
+            class="fa fa-linkedin"
+            href="https://example.com"
+            target="_blank"
+          ></a>
+          <a
+            class="fa fa-instagram"
+            href="https://example.com"
+            target="_blank"
+          ></a>
+          <a class="fa fa-rss" href="https://example.com" target="_blank"></a>
         </div>
-        <div class="row-short">
-            <img class="logo" src="./img/logo-white.png" alt="Matrox logo">
-            <div class="trio">
-                <p>Copyright &copy; 2025 <a href="#">Matrox</a></p>
-                <p>All rights reserved</p>
-                <p>Designed by <a href="#">TrendyTheme</a></p>
-            </div>
-            <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus neque, accusbus officiis illo similique odit voluptatibus <a href="#">200+</a> laudantium placeat dignissimos saepe nulla corporis, voluptate facere <a href="#">Matrox</a> qui quasi!</p>
+        <a href="#" class="back_to_top fa fa-angle-up"></a>
+      </div>
+      <div class="row-short">
+        <img class="logo" src="./img/logo-white.png" alt="Logo white" />
+        <div class="trio">
+          <p>Copyright &copy; 2025 <a href="#">Matrox</a></p>
+          <p>All rights reserved</p>
+          <p>Designed by <a href="#">TrendyTheme</a></p>
         </div>
+        <p class="center">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi commodi
+          unde culpa! Consectetur, ipsa dignissimos <a href="#">200+</a> eos
+          consequuntur labore quibusdam laudantium minima quis amet rerum.
+          Consectetur dolores <a href="#">Matrox</a> quisquam beatae?
+        </p>
+      </div>
     </footer>
-
-    
-</body>
+  </body>
 
 </html>
